<resources>
    <string name="app_name">PinkBirdApplication</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">ABOUT</string>
    <string name="home">HOME</string>
    <string name="setting">SETTING</string>
    <string name="history">HISTORY</string>
    <string name="savePeriod_btn">Save</string>
    <string name="getStarted">Get Started</string>
    <string name="next_text">Next</string>
    <string name="Welcome_text">WELCOME TO PINKBIRD</string>
    <string name="Step1">step 1 out of 3</string>
    <string name="next">Next</string>
    <string name="Step2">step 2 out of 3</string>
    <string name="Step1_text">On average, how long is your period?</string>
    <string name="Step2_text">On average, how long is your cycle?</string>
    <string name="Step3_text">When did your last period start?</string>
    <string name="Step3">step 3 out of 3</string>
    <string name="action_setting">Setting</string>
    <string name="action_calenda">Calenda</string>
    <string name="action_home">Home</string>
    <string name="Notifivation_text">Start Date period</string>
    <string name="Date_noti">Days</string>
    <string name="time_noti">TIME</string>
    <string name="message_noti">Message</string>
    <string name="DatePeriod_text">12 Days</string>
    <string name="status">ประจำเดือนใน</string>
    <string name="date_text">9 October 2019</string>
    <string name="stop_btn">STOP</string>
    <string name="about_name">SUPISARA PRASITTINAWA</string>
    <string name="about_id">59160134</string>
    <string name="cleared_message">All your data is gone forever.</string>


<!-- Share   -->
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <!-- Share   -->
</resources>
